	* Committing paste when changing tool is now enabled by default
	* Saving an image now commits paste if auto commit mode is enabled
	* "Scale canvas" and "Resize canvas" now remember their aspect ratio toggle setting
	* The Free Rotate window now remembers the previous rotation angle in that mtPaint session
	* Alpha values for colours A & B are now displayed on settings toolbar when editing image with alpha in coupled alpha mode
	* Undo system now uses a bit less memory
	* Support for compiling with giflib 5, libpng 1.6 and libjpeg 9 added
	* BUGFIX - Compilation without JPEG and TIFF support now works again
	* BUGFIX - FreeType text tool now skips directory loops when scanning font directories
	* BUGFIX - Geometry info on the status bar now correctly updates after arrow keys or Escape key
	* BUGFIX - Gradient button no longer fails to show current gradient mode after showing settings toolbar
	* BUGFIX - Ctrl+left/right/double click now set both colour and alpha from canvas in coupled alpha mode, as they should
	* BUGFIX - New image creation from system clipboard now respects "Undoable" toggle
	* BUGFIX - Problem with layers list in inactive dock tab sometimes not updating is now eliminated
	* BUGFIX - All keyboard shortcuts now work in Image View mode, as they should
	* BUGFIX - PAM files with type BLACKANDWHITE are no longer loaded as grayscale (except if written as grayscale - ImageMagick does that)
	* BUGFIX - Animation cycling now doesn't skip over the last frame of a GIF loaded into layers
	* BUGFIX - Background layer is now made large enough to accommodate all frames when loading animation into layers
	* BUGFIX - Animation cycles are now properly updated when layers are reordered, duplicated or deleted
	* BUGFIX - Command line switches beyond the first one are now parsed properly
	* BUGFIX - Rare problem of undo system ignoring a changed pixel is now eliminated
	* BUGFIX - Canvas window now doesn't lose mouse button press event if dock window has focus